--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,8 @@
 
 	height: 100vh;
 
-	color: rgb(87, 87, 87);
-	background-color: rgb(87, 87, 87);
+	color: rgb(0, 204, 255);
+	background-color: rgb(61, 60, 60);
 }
 
 .counter__window {
@@ -36,11 +36,54 @@
 
 	margin-bottom: 15px;
 
-	background-color: rgb(0, 204, 255);
+	border: 2px solid rgb(0, 204, 255);
 	border-radius: 15px;
 
 	width: 100%;
 	height: 60%;
+}
+
+.counter__start__values {
+	display: flex;
+	flex-direction: column;
+
+	gap: 20px;
+}
+
+.values_values {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 40px;
+}
+
+.input__max__value {
+	text-align: center;
+	direction: none;
+
+	border: 4px solid rgb(0, 204, 255);
+	border-radius: 10px;
+	height: 30px;
+}
+
+input:focus {
+	outline: 3px solid rgb(152, 231, 251);
+}
+
+.input__start__value {
+	text-align: center;
+	direction: none;
+
+	height: 30px;
+
+	border: 4px solid rgb(0, 204, 255);
+	border-radius: 10px;
+}
+
+.counter__text {
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	font-weight: 700px;
+	font-size: 40px;
 }
 
 .buttons__items {
@@ -59,6 +102,8 @@
 }
 
 .button {
+	outline: none;
+
 	height: 60%;
 	width: 40%;
 
@@ -75,7 +120,7 @@
 	cursor: pointer;
 
 	&:active {
-		background-color: rgb(87, 87, 87);
+		background-color: rgb(61, 60, 60);
 		color: rgb(0, 204, 255);
 		border: 2px solid rgb(0, 204, 255);
 	}
